[gd_scene load_steps=7 format=3 uid="uid://8ms3ydi7jyri"]

[ext_resource type="Script" path="res://scenes/main menu/main_menu.gd" id="1_725wh"]
[ext_resource type="Shader" path="res://resources/shaders/scroll.gdshader" id="1_m4e7t"]
[ext_resource type="Texture2D" uid="uid://crmvge16kn2qd" path="res://Assets/environment/City/Background.png" id="2_myynb"]
[ext_resource type="Texture2D" uid="uid://bys53v4s613i6" path="res://Assets/UI/VirucideLogo.png" id="4_n74j8"]
[ext_resource type="Theme" uid="uid://b1agldm4pc558" path="res://resources/simple_theme.tres" id="5_m4wlh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u2sk4"]
shader = ExtResource("1_m4e7t")
shader_parameter/speed = 0.02

[node name="MainMenu" type="CanvasLayer"]
layer = 0
script = ExtResource("1_725wh")

[node name="scrollingbackground" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_u2sk4")
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -320.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_myynb")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_right = 72.0
offset_bottom = 88.0
grow_horizontal = 2
texture = ExtResource("4_n74j8")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -132.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Start Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../tutorial")
theme = ExtResource("5_m4wlh")
text = "Start Game"

[node name="tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Start Game")
focus_neighbor_bottom = NodePath("../Player_Stats")
theme = ExtResource("5_m4wlh")
text = "Tutorial"

[node name="Player_Stats" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_m4wlh")
text = "Player Stats"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Player_Stats")
theme = ExtResource("5_m4wlh")
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="button_up" from="VBoxContainer/Player_Stats" to="." method="_on_player_stats_button_up"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
